--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -69,4 +69,8 @@
     <string name="delete_dialog_message">Are you sure you want to delete the product?</string>
     <string name="yes">Yes</string>
     <string name="no">No</string>
+
+    <string name="title_product_details">PRODUCT DETAIL</string>
+    <string name="lbl_product_description">Product Descriptions</string>
+    <string name="lbl_product_details_stock_quantity">Stock Quantity</string>
 </resources>
