Insert store activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -133,4 +133,5 @@
     <string name="lbl_store_description">Store Description</string>
     <string name="btn_lbl_edit_description">EDIT DESCRIPTION</string>
     <string name="edit_store_description">EDIT STORE DESCRIPTION</string>
+    <string name="no_stores_added_yet">No store added yet!</string>
 </resources>
